--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>My New HTML Website</title>
 </head>
 
 <body>
+  <h1> My New Website</h1>
 </body>
 </html>
